--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@mediapipe/tasks-genai": "^0.10.22",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/three": "^0.176.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
